kajit/src/snapshots/kajit__disasm_tests__disasm_json_all_scalars_x86_64.snap
---
source: kajit/src/disasm_tests.rs
expression: out
---
=== json/all_scalars ===
> push rbp
  sub rsp, 0x1a0
  mov qword [rsp], rbp
  mov qword [rsp + 0x8], rbx
  mov qword [rsp + 0x10], r12
  mov qword [rsp + 0x18], r13
  mov qword [rsp + 0x20], r14
  mov qword [rsp + 0x28], r15
  mov r14, rdi
  mov r15, rsi
  mov r12, qword [r15]
  mov r13, qword [r15 + 0x8]
  mov qword [r15], r12
  lea r10, qword [r14]
  push r10
  mov rdi, r15
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x1239
  mov r10, 0x0
  mov rcx, r10
  mov qword [rsp + 0x40], rcx
  mov r10, 0x7d
  mov rbx, r10
  mov r10, 0xfff
  mov rax, r10
  mov qword [rsp + 0x180], rax
  mov qword [r15], r12
  lea r10, qword [r14]
  push r10
  mov rdi, r15
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x11ca
  cmp r12, r13
  jnb $+0x5
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x11ac
  movzx r10d, byte [r12]
  mov rsi, r10
  mov r10, rsi
  cmp r10, rbx
  setnz r10b
  movzx r10, r10b
  mov rbx, r10
  test rbx, rbx
  jz $+0x5
  jmp $+0x22
  add r12, 0x1
  mov rcx, qword [rsp + 0x40]
  mov rbx, rcx
  mov rax, qword [rsp + 0x180]
  mov rbx, rcx
  jmp $+0x10f9
  mov rcx, qword [rsp + 0x40]
  mov rdx, rcx
  jmp $+0x0
  lea r10, qword [rsp + 0x30]
  mov rax, r10
  lea r10, qword [rsp + 0x38]
  mov rcx, r10
  mov r10, 0x0
  mov rbx, r10
  mov qword [rsp + 0x50], rbx
  mov r10, 0x<imm>
  mov rbx, r10
  mov qword [rsp + 0x58], rbx
  mov r10, 0x6
  mov rbx, r10
  mov qword [rsp + 0x60], rbx
  mov r10, 0x1
  mov rdx, r10
  mov qword [rsp + 0x40], rdx
  mov r10, 0x<imm>
  mov rbx, r10
  mov qword [rsp + 0x70], rbx
  mov r10, 0x4
  mov rbx, r10
  mov qword [rsp + 0x78], rbx
  mov r10, 0x1
  mov rbx, r10
  mov qword [rsp + 0x80], rbx
  mov r10, 0x<imm>
  mov rdx, r10
  mov qword [rsp + 0x88], rdx
  mov r10, 0x5
  mov rdx, r10
  mov qword [rsp + 0x90], rdx
  mov r10, 0x1
  mov rbx, r10
  mov qword [rsp + 0x98], rbx
  mov r10, 0x<imm>
  mov rsi, r10
  mov qword [rsp + 0xa0], rsi
  mov r10, 0x5
  mov rdi, r10
  mov qword [rsp + 0xa8], rdi
  mov r10, 0x1
  mov rbx, r10
  mov qword [rsp + 0xb0], rbx
  mov r10, 0x<imm>
  mov rdx, r10
  mov qword [rsp + 0xb8], rdx
  mov r10, 0x5
  mov rdx, r10
  mov qword [rsp + 0xc0], rdx
  mov r10, 0x1
  mov rbx, r10
  mov qword [rsp + 0xc8], rbx
  mov r10, 0x<imm>
  mov rdx, r10
  mov qword [rsp + 0xd0], rdx
  mov r10, 0x4
  mov rdx, r10
  mov qword [rsp + 0xd8], rdx
  mov r10, 0x1
  mov rbx, r10
  mov qword [rsp + 0xe0], rbx
  mov r10, 0x<imm>
  mov rdx, r10
  mov qword [rsp + 0xe8], rdx
  mov r10, 0x5
  mov rdx, r10
  mov qword [rsp + 0xf0], rdx
  mov r10, 0x1
  mov rbx, r10
  mov qword [rsp + 0xf8], rbx
  mov r10, 0x<imm>
  mov rdx, r10
  mov qword [rsp + 0x100], rdx
  mov r10, 0x5
  mov rdx, r10
  mov qword [rsp + 0x108], rdx
  mov r10, 0x1
  mov rsi, r10
  mov qword [rsp + 0x110], rsi
  mov r10, 0x<imm>
  mov rdx, r10
  mov qword [rsp + 0x118], rdx
  mov r10, 0x5
  mov rdx, r10
  mov qword [rsp + 0x120], rdx
  mov r10, 0x1
  mov rbx, r10
  mov qword [rsp + 0x128], rbx
  mov r10, 0x<imm>
  mov rdx, r10
  mov qword [rsp + 0x130], rdx
  mov r10, 0x5
  mov rdx, r10
  mov qword [rsp + 0x138], rdx
  mov r10, 0x1
  mov rbx, r10
  mov qword [rsp + 0x140], rbx
  mov r10, 0x<imm>
  mov rdx, r10
  mov qword [rsp + 0x148], rdx
  mov r10, 0x5
  mov rdx, r10
  mov qword [rsp + 0x150], rdx
  mov r10, 0x1
  mov rbx, r10
  mov qword [rsp + 0x158], rbx
  mov r10, 0x<imm>
  mov rdx, r10
  mov qword [rsp + 0x160], rdx
  mov r10, 0x8
  mov rdx, r10
  mov qword [rsp + 0x168], rdx
  mov r10, 0x1
  mov rbx, r10
  mov qword [rsp + 0x170], rbx
  mov r10, 0x2c
  mov rdi, r10
  mov qword [rsp + 0x178], rdi
  mov qword [r15], r12
  push rax
  push rcx
  lea r10, qword [r14]
  push r10
  mov rdi, r15
  pop rcx
  pop rdx
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0xddf
  mov rax, qword [rsp + 0x50]
  mov rdx, qword [rsp + 0x40]
  mov r10, rax
  cmp r10, rdx
  setnz r10b
  movzx r10, r10b
  mov rsi, r10
  mov qword [rsp + 0x68], rsi
  mov r10, qword [rsp + 0x30]
  mov rax, r10
  mov qword [rsp + 0x40], rax
  mov r10, qword [rsp + 0x38]
  mov rcx, r10
  mov qword [rsp + 0x48], rcx
  mov qword [r15], r12
  lea r10, qword [r14]
  push r10
  mov rdi, r15
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0xd58
  mov rax, qword [rsp + 0x48]
  mov rcx, qword [rsp + 0x58]
  mov rbx, qword [rsp + 0x60]
  mov r9, qword [rsp + 0x40]
  push r9
  push rax
  push rcx
  push rbx
  pop rcx
  pop rdx
  pop rsi
  pop rdi
  mov rax, 0x<imm>
  call rax
  mov rbx, rax
  mov qword [rsp + 0x60], rbx
  mov r9, qword [rsp + 0x40]
  mov rbx, qword [rsp + 0x70]
  mov rcx, qword [rsp + 0x78]
  mov rax, qword [rsp + 0x48]
  push r9
  push rax
  push rbx
  push rcx
  pop rcx
  pop rdx
  pop rsi
  pop rdi
  mov rax, 0x<imm>
  call rax
  mov rbx, rax
  mov qword [rsp + 0x78], rbx
  mov r9, qword [rsp + 0x40]
  mov rbx, qword [rsp + 0x88]
  mov rdx, qword [rsp + 0x90]
  mov rax, qword [rsp + 0x48]
  push r9
  push rax
  push rbx
  push rdx
  pop rcx
  pop rdx
  pop rsi
  pop rdi
  mov rax, 0x<imm>
  call rax
  mov rbx, rax
  mov rax, qword [rsp + 0x48]
  mov rsi, qword [rsp + 0xa0]
  mov rdi, qword [rsp + 0xa8]
  mov r9, qword [rsp + 0x40]
  mov qword [rsp + 0x90], rbx
  push r9
  push rax
  push rsi
  push rdi
  pop rcx
  pop rdx
  pop rsi
  pop rdi
  mov rax, 0x<imm>
  call rax
  mov rbx, rax
  mov qword [rsp + 0xa8], rbx
  mov r9, qword [rsp + 0x40]
  mov rbx, qword [rsp + 0xb8]
  mov rdx, qword [rsp + 0xc0]
  mov rax, qword [rsp + 0x48]
  push r9
  push rax
  push rbx
  push rdx
  pop rcx
  pop rdx
  pop rsi
  pop rdi
  mov rax, 0x<imm>
  call rax
  mov rbx, rax
  mov qword [rsp + 0xc0], rbx
  mov r9, qword [rsp + 0x40]
  mov rbx, qword [rsp + 0xd0]
  mov rdx, qword [rsp + 0xd8]
  mov rax, qword [rsp + 0x48]
  push r9
  push rax
  push rbx
  push rdx
  pop rcx
  pop rdx
  pop rsi
  pop rdi
  mov rax, 0x<imm>
  call rax
  mov rbx, rax
  mov qword [rsp + 0xd8], rbx
  mov r9, qword [rsp + 0x40]
  mov rbx, qword [rsp + 0xe8]
  mov rdx, qword [rsp + 0xf0]
  mov rax, qword [rsp + 0x48]
  push r9
  push rax
  push rbx
  push rdx
  pop rcx
  pop rdx
  pop rsi
  pop rdi
  mov rax, 0x<imm>
  call rax
  mov rbx, rax
  mov qword [rsp + 0xf0], rbx
  mov r9, qword [rsp + 0x40]
  mov rbx, qword [rsp + 0x100]
  mov rdx, qword [rsp + 0x108]
  mov rax, qword [rsp + 0x48]
  push r9
  push rax
  push rbx
  push rdx
  pop rcx
  pop rdx
  pop rsi
  pop rdi
  mov rax, 0x<imm>
  call rax
  mov rbx, rax
  mov qword [rsp + 0x108], rbx
  mov r9, qword [rsp + 0x40]
  mov rbx, qword [rsp + 0x118]
  mov rdx, qword [rsp + 0x120]
  mov rax, qword [rsp + 0x48]
  push r9
  push rax
  push rbx
  push rdx
  pop rcx
  pop rdx
  pop rsi
  pop rdi
  mov rax, 0x<imm>
  call rax
  mov rbx, rax
  mov qword [rsp + 0x120], rbx
  mov r9, qword [rsp + 0x40]
  mov rbx, qword [rsp + 0x130]
  mov rdx, qword [rsp + 0x138]
  mov rax, qword [rsp + 0x48]
  push r9
  push rax
  push rbx
  push rdx
  pop rcx
  pop rdx
  pop rsi
  pop rdi
  mov rax, 0x<imm>
  call rax
  mov rbx, rax
  mov qword [rsp + 0x138], rbx
  mov r9, qword [rsp + 0x40]
  mov rbx, qword [rsp + 0x148]
  mov rdx, qword [rsp + 0x150]
  mov rax, qword [rsp + 0x48]
  push r9
  push rax
  push rbx
  push rdx
  pop rcx
  pop rdx
  pop rsi
  pop rdi
  mov rax, 0x<imm>
  call rax
  mov rbx, rax
  mov qword [rsp + 0x150], rbx
  mov r9, qword [rsp + 0x40]
  mov rbx, qword [rsp + 0x160]
  mov rdx, qword [rsp + 0x168]
  mov rax, qword [rsp + 0x48]
  push r9
  push rax
  push rbx
  push rdx
  pop rcx
  pop rdx
  pop rsi
  pop rdi
  mov rax, 0x<imm>
  call rax
  mov rbx, rax
  mov rsi, qword [rsp + 0x68]
  mov rdi, qword [rsp + 0x60]
  mov qword [rsp + 0x168], rbx
  mov r10, rdi
  and r10, rsi
  mov rbx, r10
  test rbx, rbx
  jz $+0x5
  jmp $+0x23
  mov rbx, qword [rsp + 0x188]
  mov rax, qword [rsp + 0x50]
  mov rcx, rax
  mov rcx, rax
  mov rax, qword [rsp + 0x80]
  jmp $+0x6b
  mov rbx, qword [rsp + 0x188]
  mov qword [r15], r12
  lea r10, qword [r14 + 0x40]
  push r10
  mov rdi, r15
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x97a
  mov r10, 0x1
  mov rcx, r10
  mov r10, 0x1
  mov rax, r10
  mov r10, rbx
  or r10, rcx
  mov rbx, r10
  mov rcx, rax
  jmp $+0x0
  mov r10, rcx
  cmp r10, rax
  setnz r10b
  movzx r10, r10b
  mov rax, r10
  mov rdx, qword [rsp + 0x78]
  mov r10, rdx
  and r10, rax
  mov rax, r10
  test rax, rax
  jz $+0x5
  jmp $+0x13
  mov rax, rcx
  mov rax, rcx
  mov rcx, qword [rsp + 0x98]
  jmp $+0x60
  mov qword [r15], r12
  lea r10, qword [r14 + 0x41]
  push r10
  mov rdi, r15
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x8d4
  mov r10, 0x2
  mov rcx, r10
  mov r10, 0x1
  mov rax, r10
  mov r10, rbx
  or r10, rcx
  mov rbx, r10
  jmp $+0x0
  mov r10, rax
  cmp r10, rcx
  setnz r10b
  movzx r10, r10b
  mov rdi, r10
  mov rcx, qword [rsp + 0x90]
  mov r10, rcx
  and r10, rdi
  mov r9, r10
  test r9, r9
  jz $+0x5
  jmp $+0x13
  mov rcx, rax
  mov rcx, rax
  mov rax, qword [rsp + 0xb0]
  jmp $+0x63
  mov qword [r15], r12
  lea r10, qword [r14 + 0x3c]
  push r10
  mov rdi, r15
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x831
  mov r10, 0x4
  mov rcx, r10
  mov r10, 0x1
  mov rax, r10
  mov r10, rbx
  or r10, rcx
  mov rbx, r10
  mov rcx, rax
  jmp $+0x0
  mov r10, rcx
  cmp r10, rax
  setnz r10b
  movzx r10, r10b
  mov rax, r10
  mov rdx, qword [rsp + 0xa8]
  mov r10, rdx
  and r10, rax
  mov rax, r10
  test rax, rax
  jz $+0x5
  jmp $+0x13
  mov rax, rcx
  mov rax, rcx
  mov rcx, qword [rsp + 0xc8]
  jmp $+0x60
  mov qword [r15], r12
  lea r10, qword [r14 + 0x30]
  push r10
  mov rdi, r15
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x78b
  mov r10, 0x8
  mov rcx, r10
  mov r10, 0x1
  mov rax, r10
  mov r10, rbx
  or r10, rcx
  mov rbx, r10
  jmp $+0x0
  mov r10, rax
  cmp r10, rcx
  setnz r10b
  movzx r10, r10b
  mov rcx, r10
  mov rdx, qword [rsp + 0xc0]
  mov r10, rdx
  and r10, rcx
  mov rcx, r10
  test rcx, rcx
  jz $+0x5
  jmp $+0x13
  mov rsi, rax
  mov rsi, rax
  mov rax, qword [rsp + 0xe0]
  jmp $+0x63
  mov qword [r15], r12
  lea r10, qword [r14 + 0x18]
  push r10
  mov rdi, r15
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x6e8
  mov r10, 0x10
  mov rsi, r10
  mov r10, 0x1
  mov rdi, r10
  mov r10, rbx
  or r10, rsi
  mov rbx, r10
  mov rsi, rdi
  jmp $+0x0
  mov r10, rsi
  cmp r10, rax
  setnz r10b
  movzx r10, r10b
  mov rax, r10
  mov rcx, qword [rsp + 0xd8]
  mov r10, rcx
  and r10, rax
  mov rax, r10
  test rax, rax
  jz $+0x5
  jmp $+0x13
  mov rcx, rsi
  mov rax, qword [rsp + 0xf8]
  mov rcx, rsi
  jmp $+0x63
  mov qword [r15], r12
  lea r10, qword [r14 + 0x42]
  push r10
  mov rdi, r15
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x642
  mov r10, 0x20
  mov rcx, r10
  mov r10, 0x1
  mov rax, r10
  mov r10, rbx
  or r10, rcx
  mov rbx, r10
  mov rcx, rax
  jmp $+0x0
  mov r10, rcx
  cmp r10, rax
  setnz r10b
  movzx r10, r10b
  mov rax, r10
  mov rdx, qword [rsp + 0xf0]
  mov r10, rdx
  and r10, rax
  mov rax, r10
  test rax, rax
  jz $+0x5
  jmp $+0x13
  mov rax, rcx
  mov rax, rcx
  mov rsi, qword [rsp + 0x110]
  jmp $+0x60
  mov qword [r15], r12
  lea r10, qword [r14 + 0x3e]
  push r10
  mov rdi, r15
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x59c
  mov r10, 0x40
  mov rcx, r10
  mov r10, 0x1
  mov rax, r10
  mov r10, rbx
  or r10, rcx
  mov rbx, r10
  jmp $+0x0
  mov r10, rax
  cmp r10, rsi
  setnz r10b
  movzx r10, r10b
  mov rsi, r10
  mov rcx, qword [rsp + 0x108]
  mov r10, rcx
  and r10, rsi
  mov r8, r10
  test r8, r8
  jz $+0x5
  jmp $+0x13
  mov rcx, rax
  mov rcx, rax
  mov rax, qword [rsp + 0x128]
  jmp $+0x63
  mov qword [r15], r12
  lea r10, qword [r14 + 0x34]
  push r10
  mov rdi, r15
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x4f9
  mov r10, 0x80
  mov rcx, r10
  mov r10, 0x1
  mov rax, r10
  mov r10, rbx
  or r10, rcx
  mov rbx, r10
  mov rcx, rax
  jmp $+0x0
  mov r10, rcx
  cmp r10, rax
  setnz r10b
  movzx r10, r10b
  mov rax, r10
  mov rdx, qword [rsp + 0x120]
  mov r10, rdx
  and r10, rax
  mov rax, r10
  test rax, rax
  jz $+0x5
  jmp $+0x13
  mov rax, rcx
  mov rax, rcx
  mov rcx, qword [rsp + 0x140]
  jmp $+0x60
  mov qword [r15], r12
  lea r10, qword [r14 + 0x20]
  push r10
  mov rdi, r15
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x453
  mov r10, 0x100
  mov rcx, r10
  mov r10, 0x1
  mov rax, r10
  mov r10, rbx
  or r10, rcx
  mov rbx, r10
  jmp $+0x0
  mov r10, rax
  cmp r10, rcx
  setnz r10b
  movzx r10, r10b
  mov rcx, r10
  mov rdx, qword [rsp + 0x138]
  mov r10, rdx
  and r10, rcx
  mov rcx, r10
  test rcx, rcx
  jz $+0x5
  jmp $+0x13
  mov rsi, rax
  mov rsi, rax
  mov rax, qword [rsp + 0x158]
  jmp $+0x60
  mov qword [r15], r12
  lea r10, qword [r14 + 0x38]
  push r10
  mov rdi, r15
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x3b0
  mov r10, 0x200
  mov rdi, r10
  mov r10, 0x1
  mov rsi, r10
  mov r10, rbx
  or r10, rdi
  mov rbx, r10
  jmp $+0x0
  mov r10, rsi
  cmp r10, rax
  setnz r10b
  movzx r10, r10b
  mov rax, r10
  mov rcx, qword [rsp + 0x150]
  mov r10, rcx
  and r10, rax
  mov rax, r10
  test rax, rax
  jz $+0x5
  jmp $+0x13
  mov rax, rsi
  mov rax, rsi
  mov rcx, qword [rsp + 0x170]
  jmp $+0x60
  mov qword [r15], r12
  lea r10, qword [r14 + 0x28]
  push r10
  mov rdi, r15
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x30d
  mov r10, 0x400
  mov rcx, r10
  mov r10, 0x1
  mov rax, r10
  mov r10, rbx
  or r10, rcx
  mov rbx, r10
  jmp $+0x0
  mov r10, rax
  cmp r10, rcx
  setnz r10b
  movzx r10, r10b
  mov rcx, r10
  mov rdx, qword [rsp + 0x168]
  mov r10, rdx
  and r10, rcx
  mov rcx, r10
  test rcx, rcx
  jz $+0x5
  jmp $+0xb
  mov rcx, rax
  mov rcx, rax
  jmp $+0x63
  mov qword [r15], r12
  lea r10, qword [r14]
  push r10
  mov rdi, r15
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x272
  mov r10, 0x800
  mov rcx, r10
  mov r10, 0x1
  mov rax, r10
  mov r10, rbx
  or r10, rcx
  mov rbx, r10
  mov rcx, rax
  jmp $+0x0
  test rcx, rcx
  jz $+0x5
  jmp $+0x48
  mov qword [r15], r12
  lea r10, qword [r14]
  push r10
  mov rdi, r15
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x201
  mov rsi, rbx
  mov qword [rsp + 0x170], rbx
  jmp $+0x8
  mov rsi, rbx
  jmp $+0x0
  mov qword [r15], r12
  lea r10, qword [r14]
  push r10
  mov rdi, r15
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x1b1
  cmp r12, r13
  jnb $+0x5
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x193
  cmp r12, r13
  jnb $+0x5
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x175
  movzx r10d, byte [r12]
  mov rax, r10
  add r12, 0x1
  mov rdi, qword [rsp + 0x178]
  mov r10, rax
  cmp r10, rdi
  setnz r10b
  movzx r10, r10b
  mov rbx, r10
  test rbx, rbx
  jz $+0x5
  jmp $+0x23
  mov r10, 0x1
  mov rbx, r10
  mov rax, rbx
  mov rsi, qword [rsp + 0x170]
  mov rbx, rsi
  mov rbx, rsi
  jmp $+0xa4
  mov rsi, qword [rsp + 0x170]
  mov rbx, rsi
  mov r10, 0x7d
  mov rcx, r10
  mov r10, rax
  cmp r10, rcx
  setnz r10b
  movzx r10, r10b
  mov rax, r10
  test rax, rax
  jz $+0x5
  jmp $+0x18
  mov r10, 0x0
  mov rax, r10
  mov rcx, rbx
  mov rcx, rbx
  jmp $+0x4d
  mov qword [r15], r12
  lea r10, qword [r14]
  push r10
  mov rdi, r15
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x95
  mov r10, 0x0
  mov rax, r10
  mov rcx, rbx
  jmp $+0x0
  mov rbx, rcx
  jmp $+0x0
  test rax, rax
  jnz $+0x95
  jmp $+0x0
  mov r10, rbx
  and r10, rax
  mov rbx, r10
  mov r10, rbx
  cmp r10, rax
  setnz r10b
  movzx r10, r10b
  mov rbx, r10
  test rbx, rbx
  jz $+0x1a
  jmp $+0x5
  jmp $+0x10
  mov dword [r15 + 0x10], 0xa
  jmp $+0x2d
  mov qword [r15], r12
  mov r15, qword [rsp + 0x28]
  mov r14, qword [rsp + 0x20]
  mov r13, qword [rsp + 0x18]
  mov r12, qword [rsp + 0x10]
  mov rbx, qword [rsp + 0x8]
  mov rbp, qword [rsp]
  add rsp, 0x1a0
  pop rbp
  ret
  mov r15, qword [rsp + 0x28]
  mov r14, qword [rsp + 0x20]
  mov r13, qword [rsp + 0x18]
  mov r12, qword [rsp + 0x10]
  mov rbx, qword [rsp + 0x8]
  mov rbp, qword [rsp]
  add rsp, 0x1a0
  pop rbp
  ret
